# algolab-ml

./: .gitignore  LICENSE  README.md  mapping.json  pyproject.toml  setup.cfg  setup.py
algolab_ml/cli/: mlrun.py
algolab_ml/data/: cleaning.py  io.py
algolab_ml/eval/: metrics.py
algolab_ml/features/: builder.py  nlp.py  ops.py  timeseries.py  transform.py
algolab_ml/models/: ensemble.py  model_zoo.py  param_spaces.py  selection.py  train.py
algolab_ml/pipelines/: tabular.py
algolab_ml/utils/: artifacts.py  config.py  metrics.py  plots.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
examples/: make_examples.py
examples/churn/: README.md
examples/churn/configs/: clean_churn.yaml  feat_churn.yaml
examples/churn/data/: demo_marketing_churn.csv  demo_marketing_churn_new.csv
examples/housing/: README.md
examples/housing/configs/: clean_housing.yaml  feat_housing.yaml
examples/housing/data/: demo_housing.csv
examples/timeseries/: README.md
examples/timeseries/data/: demo_retail_timeseries.csv
samples/: clean_config.yaml  clean_config_aggressive.yaml  clean_config_demo.yaml  feat_config_demo.yaml  feat_tmean_demo.yaml  features_tfidf.yaml
