[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "algolab-ml"
version = "0.1.0"
description = "Algolab ML modular package (data/cleaning/features/models/pipelines)"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Algolab"}]
dependencies = [
  "numpy>=1.23,<3.0",
  "pandas>=1.5",
  "scikit-learn>=1.4",
  "lightgbm>=4.0",
  "xgboost>=1.7",
  "catboost>=1.2",
  "pyyaml>=6.0",
  "matplotlib>=3.7",
  "joblib>=1.3"
]

[tool.setuptools]
package-dir = {"" = "."}
packages = { find = { include = ["algolab_ml*"] } }

[project.scripts]
algolab-mlrun = "algolab_ml.cli.mlrun:main"
algolab_mlrun = "algolab_ml.cli.mlrun:main"